welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:6: error: type mismatch;
 found   : Unit
 required: Int
	if(nums.length==1 && nums(0)==value){
        ^