welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var j :Int = 0
	if(nums.length==0){
		return -1;
	}
	if(nums.length==1 && nums(0)==value){
			return 0;
	}

	}
	
	
	

	


